--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,6 +1,7 @@
 header {
     width: 100vw;
     height: 100px;
+    position: absolute;
 }
 
 * {
