--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -106,9 +106,11 @@
   margin-bottom: 16px;
   transform: translateY(-500px);
   transition: 300ms;
+  flex-wrap: wrap;
 }
 
 .music-choice {
+  font-size: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -135,6 +137,7 @@
   background-color: rgba(255, 255, 255, .3);
   padding: 8px 8px;
   font-family: "Poppins", serif;
+  margin: 8px;
 }
 
 @media screen and (max-width: 1380px) {
